--- a/css/jquery.datetimepicker.css
+++ b/css/jquery.datetimepicker.css
@@ -8,7 +8,7 @@
 	color: #333333;
 	display: block;
 	font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-	padding: 8px;
+	padding: 4px;
 	padding-left: 0px;
 	padding-top: 2px;
 	position: absolute;
@@ -47,6 +47,7 @@
 	display: inline-block;
 	position: static;
 	box-shadow: none;
+	width: 100%;
 }
 .xdsoft_datetimepicker *{
 	-moz-box-sizing: border-box;
@@ -191,13 +192,13 @@
 .xdsoft_datetimepicker  .xdsoft_label > .xdsoft_select.xdsoft_yearselect{right:2px;}
 .xdsoft_datetimepicker  .xdsoft_label > .xdsoft_select > div > .xdsoft_option:hover{
 	color: #fff;
-    background: #ff8000;
+    background: #302a7a;
 }
 .xdsoft_datetimepicker  .xdsoft_label > .xdsoft_select > div > .xdsoft_option{
 	padding:2px 10px 2px 5px; 
 }
 .xdsoft_datetimepicker  .xdsoft_label > .xdsoft_select > div > .xdsoft_option.xdsoft_current{
-	background: #33AAFF;
+	background: #0ea646;
 	box-shadow: #178FE5 0px 1px 3px 0px inset;
 	color:#fff;
 	font-weight: 700;
@@ -240,12 +241,12 @@
 	background: #F1F1F1;
 }
 .xdsoft_datetimepicker  .xdsoft_calendar td.xdsoft_today{
-	color:#33AAFF;
+	color:#0ea646;
 }
 .xdsoft_datetimepicker  .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker  .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker  .xdsoft_timepicker .xdsoft_time_box >div >div.xdsoft_current{
-	background: #33AAFF;
+	background: #0ea646;
 	box-shadow: #178FE5 0px 1px 3px 0px inset;
 	color:#fff;
 	font-weight: 700;
@@ -261,7 +262,7 @@
 .xdsoft_datetimepicker  .xdsoft_calendar td:hover,
 .xdsoft_datetimepicker  .xdsoft_timepicker .xdsoft_time_box >div >div:hover{
 	color: #fff !important;
-    background: #ff8000 !important;
+    background: #302a7a !important;
     box-shadow: none !important;
 }
 .xdsoft_datetimepicker  .xdsoft_calendar td.xdsoft_disabled:hover,
