--- a/css/styles.css
+++ b/css/styles.css
@@ -1,58 +1,54 @@
-/* line 317, /home/semen/Documents/www/doctu.ru/widgets/2gis/css/styles.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/home\/semen\/Documents\/www\/doctu\.ru\/widgets\/2gis\/css\/styles\.less}line{font-family:\00003317}}
 #paging {
-  position: fixed;
-  bottom: 0;
-  width: 720px;
-  text-align: center;
-  height: 32px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    height: 32px;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
-/* line 318, /home/semen/Documents/www/doctu.ru/widgets/2gis/css/styles.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/home\/semen\/Documents\/www\/doctu\.ru\/widgets\/2gis\/css\/styles\.less}line{font-family:\00003318}}
 #paging ul {
-  padding: 0;
-  margin: 0;
-  display: inline;
-  width: 100%;
-  text-align: justify;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+    text-align: center;
+    border-radius: 4px;
 }
-/* line 319, /home/semen/Documents/www/doctu.ru/widgets/2gis/css/styles.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/home\/semen\/Documents\/www\/doctu\.ru\/widgets\/2gis\/css\/styles\.less}line{font-family:\00003319}}
 #paging ul li {
-  display: inline;
-}
-/* line 319, /home/semen/Documents/www/doctu.ru/widgets/2gis/css/styles.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/home\/semen\/Documents\/www\/doctu\.ru\/widgets\/2gis\/css\/styles\.less}line{font-family:\00003319}}
-#paging ul li > a,
-#paging ul li span {
   display: inline-block;
-  color: #0ea646 !important;
-  padding: 6px 12px;
-  text-decoration: none;
-  background-color: #ffffff;
-  border: 1px solid #dedede;
-  margin-left: -1px;
+  float: left;
 }
-/* line 321, /home/semen/Documents/www/doctu.ru/widgets/2gis/css/styles.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/home\/semen\/Documents\/www\/doctu\.ru\/widgets\/2gis\/css\/styles\.less}line{font-family:\00003321}}
-#paging ul li > a:hover,
-#paging ul li span:hover,
-#paging ul li > a:focus,
-#paging ul li span:focus {
-  background-color: #f2f2f2;
-  cursor: pointer;
+#paging ul li > a, #paging ul li span {
+    display: inline-block;
+    color: #0ea646 !important;
+    padding: 6px 12px;
+    text-decoration: none;
+    background-color: #ffffff;
+    border: 1px solid #dedede;
+    margin-left: -1px;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 13px;
 }
-/* line 323, /home/semen/Documents/www/doctu.ru/widgets/2gis/css/styles.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/home\/semen\/Documents\/www\/doctu\.ru\/widgets\/2gis\/css\/styles\.less}line{font-family:\00003323}}
+#paging ul li > a:hover, #paging ul li span:hover, #paging ul li > a:focus, #paging ul li span:focus {
+    background-color: #f2f2f2;
+    cursor: pointer;
+}
 #paging ul li span {
-  display: inline-block;
-  background-color: #f7f7f7;
+    display: inline-block;
+    background-color: #f7f7f7;
 }
-/* line 327, /home/semen/Documents/www/doctu.ru/widgets/2gis/css/styles.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/home\/semen\/Documents\/www\/doctu\.ru\/widgets\/2gis\/css\/styles\.less}line{font-family:\00003327}}
 #paging span.close-pagination {
-  display: inline-block;
-  width: 100%;
-  height: 0;
-  font-size: 0;
+    display: inline-block;
+    width: 100%;
+    height: 0;
+    font-size: 0;
+}
+#paging ul>li:first-child>a, .pagination>li:first-child>span {
+  margin-left: 0;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+}
+#paging ul>li:last-child>a, .pagination>li:last-child>span {
+border-bottom-right-radius: 4px;
+border-top-right-radius: 4px;
 }
