--- a/css/jquery.datetimepicker.css
+++ b/css/jquery.datetimepicker.css
@@ -7,7 +7,7 @@
 	border-top: 1px solid #CCCCCC;
 	color: #333333;
 	display: block;
-	font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	padding: 4px;
 	padding-left: 0px;
 	padding-top: 2px;
